improve pipeline module to be jira like
